--- a/index.html
+++ b/index.html
@@ -1,89 +1,58 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @*@Styles.Render("~/Content/css")*@
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/Content/MyMainLayOut.css" rel="stylesheet" />
-    @Scripts.Render("~/bundles/modernizr")
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Aziz Tangour</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 
-</head>
-<body>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-sm-6 col-xs-6">
-                <div class="logo">
-                  <h1><a href="#">Online <span>Shopping Store</span></a></h1>
-                    <p>My Shop</p>
-                </div>
-            </div>
-
-            <div class="col-md-6 col-sm-6 col-xs-6">
-                <div class="account">
-                   <ul>
-                       <li>
-                           <div class="hidden-xs">
-                               <h4><a>Call</a></h4>
-                               <p>018##-######</p>
-                           </div>
-
-                           <div class="visible-xs">
-
-                               <p>018##-######</p>
-                           </div>
-
-                       </li>
-                   </ul>
-                </div>
-            </div>
-            </div>
-            <div class="row">
-
-                <div class="col-md-12">
-                    <div class="nav-menus">
-
-                        <ul class="nav nav-pills">
-                            <li class="active"><a style="border-radius:initial;" href="#">Home</a></li>
-                            <li ><a style="border-radius:initial;" href="#">Location</a></li>
-                            <li ><a  style="border-radius:initial;" href="#">About</a></li>
-                        </ul>
-                    </div>
-                </div>
-
-            </div>
-
-
-        @RenderBody()
-        <hr />
-        <footer>
-            <div class="row">
-                <div class="col-md-12 copyright">
-
-                    <div class="col-md-6 col-sm-6 copyright-left">
-                        <p>&copy; @DateTime.Now.Year - OnlineShopingStore. All right reserved.</p>
-                    </div>
-
-                    <div class="col-md-6 col-sm-6 copyright-right">
-
-                        <ul class="list-unstyled list-social">
-                            <li><a href="#" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-
-                        </ul>
-                    </div>
-                </div>
-            </div>
-
-        </footer>
+  </head>
+  <body>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <h1>I'm Aziz.</h1>
+      <h2>a <span class="pro">pro</span>grammer</h2>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="mountain" src="images/mountain.png" alt="mountain-img">
+    </div>
+    <div class="middle-container">
+      <div class="profile">
+        <img src="images/circle-cropped.png" alt="aziz-photo">
+        <h2>Hello.</h2>
+        <p class="intro">I'm a web developer , I have my deegre from SUP'COM .I love the beach and I'm also a big movie nurd.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="first-skill-img" src="images/tools.png" alt="myskills">
+          <h3>Your purpose</h3>
+          <p>since i was a little boy i wanted to become a web developer</p>
+        </div>
+        <div class="skill-row">
+          <img class="second-skill-img" src="images/chillies.png" alt="an image">
+          <h3>Hot wings challenge</h3>
+          <p>I'm the best and the strongest fun of chillies I eat them whithout second thoughts</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>if lve hot wings like </h3>
+        <p class="contact-message">love hot wings as much as i do ? let's talk about it and code together at the same time</p>
+        <a href="#" class="BUTTON_ZQC">CONTACT ME</a>
+      </div>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
-</body>
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <p class="last-pg">© 2021 Tangour Aziz.</p>
+    </div>
+
+
+  </body>
 </html>
