--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <a href="/settings" class="nav__link" data-link>Settings</a>
     </nav>
     <div id="app"></div>
-    <script type="module" src="/static/js/index.js"></script>
+    <script type="module" src="/scripts/index.js"></script>
 </body>
 </html>
